# fetch_repo2

./: .gitignore  Fetch_ERD.drawio  README.md  notes.txt  pyproject.toml
notebooks/: Queries and EDA .ipynb
src/fetch/: config.py  create_db.py
src/fetch/ingestion/: load_source_data.py  transform_data.py
